--- a/package.json
+++ b/package.json
@@ -378,7 +378,7 @@
     "react-dropzone": "^14.2.3",
     "react-grid-layout": "1.4.2",
     "react-highlight-words": "0.20.0",
-    "react-hook-form": "7.5.3",
+    "react-hook-form": "^7.49.2",
     "react-i18next": "^12.0.0",
     "react-inlinesvg": "3.0.2",
     "react-loading-skeleton": "3.3.1",
