Chore: update renovate config to automerge >v1 patch updates (#80092)
update renovate config to automerge >v1 patch updates

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,10 +15,10 @@
   "postUpdateOptions": ["yarnDedupeHighest"],
   "packageRules": [
     {
+      "allowedVersions": ">=1",
+      "automerge": true,
       "matchUpdateTypes": ["patch"],
-      "excludePackagePatterns": ["^@?storybook", "^@locker"],
-      "extends": ["schedule:monthly"],
-      "groupName": "Monthly patch updates"
+      "excludePackagePatterns": ["^@?storybook", "^@locker"]
     },
     {
       "matchPackagePatterns": ["^@?storybook"],
